--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -285,7 +285,7 @@
     <string id="2v0eQ755" text="Прабачце, не цікава." />
     <string id="2vcfifbb" text="Я саступаю" />
     <string id="2WC42D5D" text="{VALUE}% хуткасьць будаваньня аблогавых машынаў блізкага бою." />
-    <string id="2WFPZrFf" text="Тады добра. Я паклічу сваіх людзей, каб яны дапамаглі сфармаваць гандлёвы караван. Спадзяюся, ён прынясе вам добры прыбытак." />
+    <string id="2WFPZrFf" text="Тады добра. Я паклічу сваіх людзей, каб яны дапамаглі сфармаваць гандлёвы канвой. Спадзяюся, ён прынясе вам добры прыбытак." />
     <string id="2wixoeOF" text="{FIRSTNAME} {?FEMALE}Валасатая{?}Валасаты{\?}" />
     <string id="2wmKs6Is" text="Як ваш лідар я магу абраць найлепшы курс дзеяньняў." />
     <string id="2WnhUBMM" text="Мой шляхціч, не маглі бы вы даць мне яшчэ адзін шанец праявіць сябе?" />
@@ -633,7 +633,7 @@
     <string id="6ETg3maz" text="Даручаны Камандзір" />
     <string id="6ex96ekx" text="{VALUE}% штраф бартару з шляхтай іншай культуры." />
     <string id="6GhWT4vi" text="Паўтараю, здавайцеся альбо змагайцеся!" />
-    <string id="6gjSupBN" text="{FIRSTNAME} Пірог з Баранінай" />
+    <string id="6gjSupBN" text="{FIRSTNAME} Баранавы Пірог" />
     <string id="6i7a1c4E" text="Файна. Сьмерць лепей за ганьбу![if:idle_angry][ib:warrior]" />
     <string id="6IA1S2XU" text="Сям'я Патрабуе Бандыта" />
     <string id="6IKKFH3A" text="Вы атрымалі паведамленьне і вялікі гаманец ад {QUEST_GIVER.LINK}. У лісьце гаворыцца: «Статак у бясьпецы. Дзякуй, прыміце гэтыя {REWARD} {GOLD_ICON} з нашай падзякай»." />
@@ -750,7 +750,7 @@
     <string id="7kNxogN8" text="прызначае незалежных старэйшынаў для падтрыманьня закону" />
     <string id="7KshRCtM" text="Цудоўна. Я неадкладна дастаўлю вам тавары.[if:convo_nonchalant]" />
     <string id="7kTipmjp" text="Тады чаму вы тут? Мы не з тых, хто вядзе справы ў пазыку. Прыходзьце, калі будзеце мець грошы." />
-    <string id="7l4I06Hi" text="Я хачу сфармаваць гандлёвы караван у гэтым горадзе." />
+    <string id="7l4I06Hi" text="Я хачу сфармаваць гандлёвы канвой у гэтым горадзе." />
     <string id="7ldEMGn6" text="Я не люблю ўцякаць з бітвы такім чынам." />
     <string id="7lee0h29" text="Адна справа - калі адзін ці двое загінуць - гэта фартуна вайны. Усё можа быць нашмат горай, калі на нас нападуць і не застанецца анікога здольнага даць адпор... Паспрабуйце не забіць іх усіх. Гэтыя людзі пойдуць на некаторую рызыку дзеля мяне, але ня будуць раскідвацца сваімі жыцьцямі задарма.[if:convo_stern]" />
     <string id="7LjTNs1k" text="{QUEST_GIVER.LINK} заплаціць вам {REWARD_GOLD}{GOLD_ICON} дэнараў, калі заданьне будзе выканана." />
@@ -1592,7 +1592,7 @@
     <string id="C6rYWvrb" text="{VALUE}% бонус фартыфікацыі ворагаў падчас адпраўленьня ваяроў на змаганьне з ворагам." />
     <string id="c7cdMWA3" text="{FIRSTNAME} Масьлянка" />
     <string id="c7V0ayuX" text="{VALUE}% гандлёвы штраф у межах гарадоў вашага ўласнага гаспадарства." />
-    <string id="c7VOPmSb" text="Створаны новы гандлёвы караваны для {HERO.NAME}." />
+    <string id="c7VOPmSb" text="Створаны новы гандлёвы канвой для {HERO.NAME}." />
     <string id="c86V0dch" text="{VALUE}% шкода пяхоты ў фармаваньні, якім вы кіруеце." />
     <string id="C8LhGtUJ" text="{VALUE} атрыбут Кантроль." />
     <string id="c9iu5lcc" text="Гэты герой цяпер заняты." />
@@ -2481,7 +2481,7 @@
     <string id="GOt2uRcJ" text="У падлеткавым узросьце {?CHILD.GENDER}яна пачала{?}ён пачаў{\?} браць на сябе сур'ёзную адказнасьць і канкураваць са сталымі амаль на роўных. {?CHILD.GENDER}Яна кіравала{?}Ён кіраваў{\?}..." />
     <string id="gp1qYbgb" text="Вашы {?IS_BATTANIA_OR_KHUZAIT}захоўнік ведаў{?}навуковец{\?} задаволены посьпехамі дзіцяці. Ён паведамляе вам, што {?CHILD.GENDER}яна{?}ён{\?} мае прыродны талент да {SKILL}." />
     <string id="GpUBP10Q" text="Калі вы пакідаеце вёску, гандляр, які відавочна жадае заслужыць вашу ўхвалу, крычыць: «{LOCAL_KING} {?LOCAL_KING.GENDER}забіла{?}забіў{\?} тысячы, але {PLAYER} — дзясяткі тысяч!»" />
-    <string id="gQ2tAvCz" text="Земляробы" />
+    <string id="gQ2tAvCz" text="земляробаў" />
     <string id="gq8sgb2J" text="{TARGET_HERO.LINK} {?CHILD.GENDER}была узята{?}быў узяты{\?} ў палон {OTHER_HERO.LINK}." />
     <string id="GQ96SX4M" text="{QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}сказала{?}сказаў{\?} вам, што {?QUEST_GIVER.GENDER}яна{?}ён{\?} мае патрэбу ў {?MOUNT_TYPE_IS_CAMEL}вярблюдах{?}конях{\?} для сваёй партыі ці аднаго зь {?QUEST_GIVER.GENDER}яе{?}яго{\?} камандзіраў гарнізону. {?QUEST_GIVER.GENDER}Яна папрасіла{?}Ён папрасіў{\?} вас даставіць {MOUNT_COUNT} {PLURAL(MOUNT_NAME)} {?QUEST_GIVER.GENDER}ёй{?}яму{\?} альбо адному зь {?QUEST_GIVER.GENDER}яе{?}яго{\?} камандзіраў гарнізону. {?QUEST_GIVER.GENDER}Яна{?}Ён{\?} заплаціць вам {REWARD_GOLD}{GOLD_ICON} дэнараў, калі заданьне будзе выканана." />
     <string id="gqboke7l" text="{VALUE} ліміт партый клана." />
@@ -2601,7 +2601,7 @@
     <string id="HG7WWmX8" text="Пакараць баламутаў за мяцеж" />
     <string id="HgdbSrq9" text="Справы ідуць добра, {?HERO.GENDER}мая пані{?}мой панове{\?}. Гандляры кажуць, што па большай частцы не нясуць страты. Некаторыя кошты завысокія, але большасьць патрэбнага людзям даступна." />
     <string id="hGheavqY" text="{?PLAYER_CHILD}Вашае дзіцё{?}Дзіцё{\?} праводзіць большую частку свайго вольнага часу, ваюючы з уяўнымі монстрамі сваім драўляным цацачным мячом." />
-    <string id="HGrsb7k2" text="Лекар" />
+    <string id="HGrsb7k2" text="лекараў" />
     <string id="hhKDZJeM" text="Павялічвае ліміт захаваньня Ежы і павялічвае прадукцыйнасьць майстэрні." />
     <string id="Hhq7nq9U" text="Вяскоўцы з навакольля зьбіраюцца, каб абараніць сваю зямлю.{DETAILED_HOSTILE_EXPLANATION}" />
     <string id="hhrRnSvr" text="Вы не змаглі ў час даставіць статак, як {?QUEST_GIVER}прасіла{?}прасіў{\?} {QUEST_GIVER.LINK}. Пастухі і статак сышлі ад вас." />
@@ -3027,7 +3027,7 @@
     <string id="JNS46jsG" text="Бонус Гаспадара" />
     <string id="JnSh4Fmz" text="Дарожны Збор" />
     <string id="jnYwiCAz" text="Гаспадарства {KINGDOM} будзе прытрымвацца {POLICY_DESCRIPTION} ({POLICY}). {POLICY_SUPPORT}" />
-    <string id="JNZwJaJ9" text="Я прымаю ўмовы і {?PLAYER.GENDER}гатова{?}гатовы{\?} заплаціць {AMOUNT}{GOLD_ICON} за стварэньне гандлёвага каравана." />
+    <string id="JNZwJaJ9" text="Я прымаю ўмовы і {?PLAYER.GENDER}гатова{?}гатовы{\?} заплаціць {AMOUNT}{GOLD_ICON} за стварэньне гандлёвага канвою." />
     <string id="jo3UHKMD" text="Пакінуць гэта іншым." />
     <string id="Jo5OjwAU" text="Вашы ваяры сапраўды гераічна змагаліся ў апошняй бітве. Дапамагалі параненым паплечнікам вярнуцца ў лагер і зьбіралі целы загінулых, часам яны з надзеяй глядзелі на вас сваімі стомленымі вачамі. Калі і быў некалі час, каб адменна адсьвяткаваць іх гераізм і самаахвяраваньне, то гэты час надышоў." />
     <string id="JO6D30FU" text="Даць ім досыць грошай для замены насеннага збожжа, нават калі гараджане могуць пачаць скардзіцца на ўзрост цэнаў" />
@@ -3994,7 +3994,7 @@
     <string id="ovDbQIo9" text="Ладзіць у селішчы фэсты і гульні, каб павысіць лаяльнасьць." />
     <string id="oVdoauUE" text="Майстар Фазы Страляніны" />
     <string id="OVeSBrhv" text="Цудоўна, я буду ўлічваць гэта пры ажыцьцяўленьні падобных дзеяньняў." />
-    <string id="OvtzH0b3" text="Ну... У горадзе маецца шмат тавараў, якія льга выгадна прадаць. Гэта зробіць за вас гандлёвы караван, які вы сфармуеце. Дзеля найманьня аховы гандлёвага каравану вам трэба сплаціць прынамсі {AMOUNT}{GOLD_ICON}, а таксама неабходны адзін кампаньён, які ўзначаліць ахову." />
+    <string id="OvtzH0b3" text="Ну... У горадзе маецца шмат тавараў, якія льга выгадна прадаць. Гэта зробіць за вас гандлёвы канвой, які вы сфармуеце. Дзеля найманьня аховы гандлёвага канвою вам трэба сплаціць прынамсі {AMOUNT}{GOLD_ICON}, а таксама неабходны адзін кампаньён, які ўзначаліць ахову." />
     <string id="Owa28Kpr" text="Я вас ледзь ведаю, а вы просіце мяне гаварыць пра здраду?" />
     <string id="Owc4NdbL" text="{CHANCE}% шанец раненьня {AMOUNT} выпадковых ваяроў" />
     <string id="OWwPj500" text="5% ад прыбытку вёскі выплачваецца клану гаспадара ў якасьці падатку{newline}Вёскі прыносяць на 5% меней прыбытку кланам" />
@@ -5179,7 +5179,7 @@
     <string id="V7qF7uas" text="Я мушу весьці наш народ, а не {CURRENT_LIEGE.NAME}." />
     <string id="v7sfiv5m" text="{INSULT_NEWS} {GAME_ACTION_NOTES}" />
     <string id="V7YG3nKb" text="{QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}сказала{?}сказаў{\?}вам, што {?QUEST_GIVER.GENDER}ёй{?}яму{\?} патрабуецца {.%}{?(REQUESTED_ANIMAL_AMOUNT &gt; 1)}{PLURAL(SELECTED_ANIMAL)}{?}{SELECTED_ANIMAL}{\?}{.%} для {?QUEST_GIVER.GENDER}яе{?}яго{\?} вёскі. {?QUEST_GIVER.GENDER}Яна папрасіла{?}Ён папрасіў{\?} вас даставіць {REQUESTED_ANIMAL_AMOUNT} {.%}{?(REQUESTED_ANIMAL_AMOUNT &gt; 1)}{PLURAL(SELECTED_ANIMAL)}{?}{SELECTED_ANIMAL}{\?}{.%} да {?QUEST_GIVER.GENDER}яе{?}яго{\?}." />
-    <string id="V8bxlnSl" text="Існуе шлях фармаваньня гандлёвага каравану з лепшай аховай?" />
+    <string id="V8bxlnSl" text="Існуе шлях фармаваньня гандлёвага канвою з лепшай аховай?" />
     <string id="v8RwzwqD" text="Прабойнік" />
     <string id="V97vqbIb" text="{VALUE}% досьвед ваярам вашай партыі пасьля бітвы." />
     <string id="v9Ad4uGn" text="{AMOUNT}% вашых ваяроў атрымае раненьні" />
@@ -5495,7 +5495,7 @@
     <string id="wVRwj2ff" text="Маё імя {CONVERSATION_HERO.FIRSTNAME}. Распытайце пра мяне, і будзеце ведаць, што са мной ня варта сварыцца.[if:convo_stern]" />
     <string id="wVyqTlpS" text="Войска Мае Патрэбу ў Забесьпячэньні" />
     <string id="Ww3uU5e6" text="раньняя сталасьць" />
-    <string id="Ww7vJSb9" text="Хто мусіць узначаліць караван?" />
+    <string id="Ww7vJSb9" text="Хто мусіць узначаліць канвой?" />
     <string id="WWFnlL3O" text="Прыхільнікі {FACTION_LIEGE}" />
     <string id="wwJGE28v" text="Перагаварыць з браканьерамі" />
     <string id="WwLy9Src" text="Вы ведаеце, што мы на вайне. Я не магу проста так вас адпусьціць." />
@@ -5700,7 +5700,7 @@
     <string id="xXJnW5w0" text="Дзіцё зьвяртае пільную ўвагу на тых, хто з {?CHILD.GENDER}ёй{?}ім{\?} гаворыць і часам спрабуе суцешыць сяброў, якія патрапілі ў бяду." />
     <string id="xXOLhxRl" text="{?CHILD.GENDER}кантралявала{?}кантраляваў{\?} варту." />
     <string id="XXOlu6z0" text="Дзякуй, што не пашкадавалі сваіх людзей, каб выратаваць маю справу. З нецярпеньнем чакаю аднаўленьня працы.[if:convo_mocking_teasing]" />
-    <string id="XxQzR39f" text="Добра, тады давайце з лепшымі ваярамі. Я гатовы заплаціць {AMOUNT}{GOLD_ICON} за стварэньне гандлёвага каравана." />
+    <string id="XxQzR39f" text="Добра, тады давайце з лепшымі ваярамі. Я гатовы заплаціць {AMOUNT}{GOLD_ICON} за стварэньне гандлёвага канвою." />
     <string id="xxVE2bw1" text="Палепшыць дарогу, але не спаганяць мыта" />
     <string id="xxZeGhqf" text="Паўстаньне {MALE_LESSER_NOBLE_NAME}" />
     <string id="Xy4brTbf" text="Вы ня маеце {BRIBE_AMOUNT} дэнараў." />
@@ -5973,7 +5973,7 @@
     <string id="z7fFBuqt" text="Я рызыкну. Наперад, хлопцы!" />
     <string id="Z7RAahk3" text="Пераканаць сваіх людзей, што грошы лепей выдаткаваць на запасы і рэкрутаў, каб забясьпечыць іх выжываньне" />
     <string id="z7y35aPE" text="Прапанова Найміцтва" />
-    <string id="z8LbFyNA" text="{FIRSTNAME} Сабачая Пыса" />
+    <string id="z8LbFyNA" text="{FIRSTNAME} Сабачча Пыса" />
     <string id="z9pbB0K5" text="Вы пасьпяхова даставілі тавары ў адпаведнасьці з запытам." />
     <string id="Z9pq58h4" text="Я думаю пра іншы навык." />
     <string id="Z9Rey6LC" text="Гадзіньнікавы Механізм" />
