--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
@@ -305,7 +305,7 @@
     <string id="xQUi0F0k" text="{.Nijaki}Паласатае Паліто" />
     <string id="XU9WgcIO" text="{.Zanocy}Узмоцненая Замшавая Браня" />
     <string id="y3CwqUDR" text="{.Zanocy}Горная Кальчужная Кашуля" />
-    <string id="y3oIzUEp" text="{.Zanocy}Туніка з Часткамі Плячэй" />
+    <string id="y3oIzUEp" text="{.Zanocy}Туніка з Наплечнымі Падкладкамі" />
     <string id="ya4i8G3y" text="{.Zanocy}Туніка з Поясам" />
     <string id="yDykmlS7" text="{.Zanocy}Тога з Тартанам" />
     <string id="yfjqWrUx" text="{.Zanocy}Лясная Сукенка Простага Чалавека" />
@@ -820,7 +820,7 @@
     <string id="e6WOD7Ra" text="{.Zanocy}Накідка з Махрамі" />
     <string id="ectdzWNx" text="{.Muzcynski}Цяжкі Шаль з Тартанам" />
     <string id="eN1eFdhF" text="{.Zanocy}Упрыгожаная Скураная Запрэжка над Лускатай" />
-    <string id="EyQTfFS6" text="{.Mnozny}Сатканыя Наплечныя Падушкі" />
+    <string id="EyQTfFS6" text="{.Mnozny}Сатканыя Наплечныя Падкладкі" />
     <string id="FItBDuqh" text="{.Muzcynski}Баваўняны Каптур" />
     <string id="FOx5vZSJ" text="{.Zanocy}Браняваны Футр Мядзьведзя" />
     <string id="FQdTo5ay" text="{.Zanocy}Лускатая Абарона Плячэй" />
@@ -1064,7 +1064,7 @@
     <string id="iEbP2INp" text="{.Zanocy}Упрыгожаная Каскара" />
     <string id="ifzgMcrK" text="{.Muzcynski}Лук Качэўніка" />
     <string id="IK2Z9zWk" text="{.Muzcynski}Просты Булат" />
-    <string id="IM2SamZ8" text="{.Muzcynski}Фалькіан" />
+    <string id="IM2SamZ8" text="{.Muzcynski}Фальшыён" />
     <string id="J3erdO1b" text="{.Muzcynski}Край Сьвітанку" />
     <string id="j4XraSN6" text="{.Zanocy}Лёгкая Дзіда" />
     <string id="JBVAeXx3" text="{.Muzcynski}Махові" />
@@ -1090,7 +1090,7 @@
     <string id="KRuZuMFI" text="{.Nijaki}Прысуд" />
     <string id="ksxylfU4" text="{.Muzcynski}Рабрысты Збройны Меч" />
     <string id="KTegaNPW" text="{.Muzcynski}Доўгі Лук" />
-    <string id="ktJ6crBs" text="{.Muzcynski}Шырокі Фалькіан" />
+    <string id="ktJ6crBs" text="{.Muzcynski}Шырокі Фальшыён" />
     <string id="Kv4zAMIh" text="{.Zanocy}Булава Катафракта" />
     <string id="kxtSkGju" text="{.Muzcynski}Амбасадар" />
     <string id="L5i5RgO0" text="{.Zanocy}Ваўняная Прашча" />
@@ -1141,7 +1141,7 @@
     <string id="QnyD1yWB" text="{.Zanocy}Шырокая Сякера Паўночніка" />
     <string id="Qpl5aCb0" text="{.Zanocy}Сякера Ваяра Ветэрана" />
     <string id="qxYDHkKl" text="{.Zanocy}Узмоцненая Прашча" />
-    <string id="qZOpdQVx" text="{.Muzcynski}Зорны Фалькіан" />
+    <string id="qZOpdQVx" text="{.Muzcynski}Зорны Фальшыён" />
     <string id="r07M9xbT" text="{.Muzcynski}Цяжкі Арбалет" />
     <string id="Rcc0JW6H" text="{.Zanocy}Тамаскінская Сталёвая Спата" />
     <string id="RcCtV0aS" text="{.Muzcynski}Лясны Цісавы Лук" />
@@ -1167,7 +1167,7 @@
      <string id="Th4E7v2h" text="{.Mnozny}Дротыкі Вершніка" />
      <string id="tpUzcdY6" text="{.Muzcynski}Высокі Ахоплены Меч-Ільд" />
     <string id="TQ1MVhIX" text="{.Zanocy}Лёгкая Дзіда Вершніка" />
-    <string id="tQw4Zfwu" text="{.Muzcynski}Завостраны Фалькіан" />
+    <string id="tQw4Zfwu" text="{.Muzcynski}Завостраны Фальшыён" />
     <string id="tsaSBPKu" text="{.Muzcynski}Цыкурыён" />
     <string id="tzoARfAm" text="{.Zanocy}Цяжкая Дзіда Дружыньніка" />
     <string id="UMX05EQF" text="{.Zanocy}Лёгкая Каралеўская Булава" />
