--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/Native/std_common_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/Native/std_common_strings_xml_by.xml
@@ -739,7 +739,7 @@
   <string id="LqPJY4s9" text="Horad Arharon uzvyšajecca tam, dzie chałodnaja, pavolna biahučaja raka Nevis upadaje ŭ voziera Łakanis. Niekali heta była ziamla łakanijcaŭ, jakija bačyli ŭ Impieryi abaroncaŭ ad bolš vajaŭničych pałajskich narodaŭ. Jany vitali i źmiešvalisia ź Impierskimi pasialencami, ich pravadyry ŭvajšli ŭ skład Sienata, a ich staryja jazyk i zvyčai źnikli."/>
   <string id="LRbGXEw2" text="{.Muzcynski}Apierany Upryhožany Kalčužny Šałom z Nanośnikam"/>
   <string id="LsZEdD2z" text="Ścieny"/>
-  <string id="LTOaBiw3" text="Hadziuka"/>
+  <string id="LTOaBiw3" text="{.Zanocy}Hadziuka"/>
   <string id="lULBZ714" text="Alej{@Plural}amfaraŭ aleju{\@}"/>
   <string id="luoXhz19" text="{.Zanocy}Ciažkaja Łamielarnaja Kamizelka"/>
   <string id="lVtoBMhp" text="{.Zanocy}Šapka z Tartanam"/>
@@ -1802,7 +1802,7 @@
   <string id="XZxIpCQH" text="Forys"/>
   <string id="y1YTxkmn" text="{.Zanocy}Vupraž"/>
   <string id="y3CwqUDR" text="{.Zanocy}Hornaja Kalčužnaja Kašula"/>
-  <string id="y3oIzUEp" text="{.Zanocy}Tunika z Častkami Plačej"/>
+  <string id="y3oIzUEp" text="{.Zanocy}Tunika z Naplečnymi Padkładkami"/>
   <string id="Y94H6XnK" text="Pryniać"/>
   <string id="Y9egTJg0" text="Dzionnaja Źmiena"/>
   <string id="YAWCkOYa" text="Ślady vyhladajuć śviežymi, i ja bačyŭ trochi dymu na haryzoncie. Jany nia mohuć ruchacca zanadta chutka, kali ŭsio jašče zajmajucca rabavańniem i nabiehami. Nie, ja ŭpeŭnieny, što my zmožam vyratavać małych... abo zahiniem pry sprobie."/>
