--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -285,7 +285,7 @@
     <string id="2v0eQ755" text="Prabačcie, nie cikava." />
     <string id="2vcfifbb" text="Ja sastupaju" />
     <string id="2WC42D5D" text="{VALUE}% chutkaść budavańnia abłohavych mašynaŭ blizkaha boju." />
-    <string id="2WFPZrFf" text="Tady dobra. Ja pakliču svaich ludziej, kab jany dapamahli sfarmavać handlovy karavan. Spadziajusia, jon pryniasie vam dobry prybytak." />
+    <string id="2WFPZrFf" text="Tady dobra. Ja pakliču svaich ludziej, kab jany dapamahli sfarmavać handlovy kanvoj. Spadziajusia, jon pryniasie vam dobry prybytak." />
     <string id="2wixoeOF" text="{FIRSTNAME} {?FEMALE}Vałasataja{?}Vałasaty{\?}" />
     <string id="2wmKs6Is" text="Jak vaš lidar ja mahu abrać najlepšy kurs dziejańniaŭ." />
     <string id="2WnhUBMM" text="Moj šlachcič, nie mahli by vy dać mnie jašče adzin šaniec prajavić siabie?" />
@@ -633,7 +633,7 @@
     <string id="6ETg3maz" text="Daručany Kamandzir" />
     <string id="6ex96ekx" text="{VALUE}% štraf bartaru z šlachtaj inšaj kultury." />
     <string id="6GhWT4vi" text="Paŭtaraju, zdavajciesia albo zmahajciesia!" />
-    <string id="6gjSupBN" text="{FIRSTNAME} Piroh z Baraninaj" />
+    <string id="6gjSupBN" text="{FIRSTNAME} Baranavy Piroh" />
     <string id="6i7a1c4E" text="Fajna. Śmierć lepiej za hańbu![if:idle_angry][ib:warrior]" />
     <string id="6IA1S2XU" text="Siamja Patrabuje Bandyta" />
     <string id="6IKKFH3A" text="Vy atrymali paviedamleńnie i vialiki hamaniec ad {QUEST_GIVER.LINK}. U liście havorycca: «Statak u biaśpiecy. Dziakuj, prymicie hetyja {REWARD} {GOLD_ICON} z našaj padziakaj»." />
@@ -750,7 +750,7 @@
     <string id="7kNxogN8" text="pryznačaje niezaležnych starejšynaŭ dla padtrymańnia zakonu" />
     <string id="7KshRCtM" text="Cudoŭna. Ja nieadkładna dastaŭlu vam tavary.[if:convo_nonchalant]" />
     <string id="7kTipmjp" text="Tady čamu vy tut? My nie z tych, chto viadzie spravy ŭ pazyku. Prychodźcie, kali budziecie mieć hrošy." />
-    <string id="7l4I06Hi" text="Ja chaču sfarmavać handlovy karavan u hetym horadzie." />
+    <string id="7l4I06Hi" text="Ja chaču sfarmavać handlovy kanvoj u hetym horadzie." />
     <string id="7ldEMGn6" text="Ja nie lublu ŭciakać z bitvy takim čynam." />
     <string id="7lee0h29" text="Adna sprava - kali adzin ci dvoje zahinuć - heta fartuna vajny. Usio moža być našmat horaj, kali na nas napaduć i nie zastaniecca anikoha zdolnaha dać adpor... Pasprabujcie nie zabić ich usich. Hetyja ludzi pojduć na niekatoruju ryzyku dziela mianie, ale nia buduć raskidvacca svaimi žyćciami zadarma.[if:convo_stern]" />
     <string id="7LjTNs1k" text="{QUEST_GIVER.LINK} zapłacić vam {REWARD_GOLD}{GOLD_ICON} denaraŭ, kali zadańnie budzie vykanana." />
@@ -1592,7 +1592,7 @@
     <string id="C6rYWvrb" text="{VALUE}% bonus fartyfikacyi vorahaŭ padčas adpraŭleńnia vajaroŭ na zmahańnie z voraham." />
     <string id="c7cdMWA3" text="{FIRSTNAME} Maślanka" />
     <string id="c7V0ayuX" text="{VALUE}% handlovy štraf u miežach haradoŭ vašaha ŭłasnaha haspadarstva." />
-    <string id="c7VOPmSb" text="Stvorany novy handlovy karavany dla {HERO.NAME}." />
+    <string id="c7VOPmSb" text="Stvorany novy handlovy kanvoj dla {HERO.NAME}." />
     <string id="c86V0dch" text="{VALUE}% škoda piachoty ŭ farmavańni, jakim vy kirujecie." />
     <string id="C8LhGtUJ" text="{VALUE} atrybut Kantrol." />
     <string id="c9iu5lcc" text="Hety hieroj ciapier zaniaty." />
@@ -2481,7 +2481,7 @@
     <string id="GOt2uRcJ" text="U padletkavym uzroście {?CHILD.GENDER}jana pačała{?}jon pačaŭ{\?} brać na siabie surjoznuju adkaznaść i kankuravać sa stałymi amal na roŭnych. {?CHILD.GENDER}Jana kiravała{?}Jon kiravaŭ{\?}..." />
     <string id="gp1qYbgb" text="Vašy {?IS_BATTANIA_OR_KHUZAIT}zachoŭnik viedaŭ{?}navukoviec{\?} zadavoleny pośpiechami dziciaci. Jon paviedamlaje vam, što {?CHILD.GENDER}jana{?}jon{\?} maje pryrodny talent da {SKILL}." />
     <string id="GpUBP10Q" text="Kali vy pakidajecie viosku, handlar, jaki vidavočna žadaje zasłužyć vašu ŭchvału, kryčyć: «{LOCAL_KING} {?LOCAL_KING.GENDER}zabiła{?}zabiŭ{\?} tysiačy, ale {PLAYER} — dziasiatki tysiač!»" />
-    <string id="gQ2tAvCz" text="Ziemlaroby" />
+    <string id="gQ2tAvCz" text="ziemlarobaŭ" />
     <string id="gq8sgb2J" text="{TARGET_HERO.LINK} {?CHILD.GENDER}była uziata{?}byŭ uziaty{\?} ŭ pałon {OTHER_HERO.LINK}." />
     <string id="GQ96SX4M" text="{QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}skazała{?}skazaŭ{\?} vam, što {?QUEST_GIVER.GENDER}jana{?}jon{\?} maje patrebu ŭ {?MOUNT_TYPE_IS_CAMEL}viarbludach{?}koniach{\?} dla svajoj partyi ci adnaho ź {?QUEST_GIVER.GENDER}jaje{?}jaho{\?} kamandziraŭ harnizonu. {?QUEST_GIVER.GENDER}Jana paprasiła{?}Jon paprasiŭ{\?} vas dastavić {MOUNT_COUNT} {PLURAL(MOUNT_NAME)} {?QUEST_GIVER.GENDER}joj{?}jamu{\?} albo adnomu ź {?QUEST_GIVER.GENDER}jaje{?}jaho{\?} kamandziraŭ harnizonu. {?QUEST_GIVER.GENDER}Jana{?}Jon{\?} zapłacić vam {REWARD_GOLD}{GOLD_ICON} denaraŭ, kali zadańnie budzie vykanana." />
     <string id="gqboke7l" text="{VALUE} limit partyj kłana." />
@@ -2601,7 +2601,7 @@
     <string id="HG7WWmX8" text="Pakarać bałamutaŭ za miaciež" />
     <string id="HgdbSrq9" text="Spravy iduć dobra, {?HERO.GENDER}maja pani{?}moj panovie{\?}. Handlary kažuć, što pa bolšaj častcy nie niasuć straty. Niekatoryja košty zavysokija, ale bolšaść patrebnaha ludziam dastupna." />
     <string id="hGheavqY" text="{?PLAYER_CHILD}Vašaje dzicio{?}Dzicio{\?} pravodzić bolšuju častku svajho volnaha času, vajujučy z ujaŭnymi monstrami svaim draŭlanym cacačnym miačom." />
-    <string id="HGrsb7k2" text="Lekar" />
+    <string id="HGrsb7k2" text="lekaraŭ" />
     <string id="hhKDZJeM" text="Pavialičvaje limit zachavańnia Ježy i pavialičvaje pradukcyjnaść majsterni." />
     <string id="Hhq7nq9U" text="Viaskoŭcy z navakolla źbirajucca, kab abaranić svaju ziamlu.{DETAILED_HOSTILE_EXPLANATION}" />
     <string id="hhrRnSvr" text="Vy nie zmahli ŭ čas dastavić statak, jak {?QUEST_GIVER}prasiła{?}prasiŭ{\?} {QUEST_GIVER.LINK}. Pastuchi i statak syšli ad vas." />
@@ -3027,7 +3027,7 @@
     <string id="JNS46jsG" text="Bonus Haspadara" />
     <string id="JnSh4Fmz" text="Darožny Zbor" />
     <string id="jnYwiCAz" text="Haspadarstva {KINGDOM} budzie prytrymvacca {POLICY_DESCRIPTION} ({POLICY}). {POLICY_SUPPORT}" />
-    <string id="JNZwJaJ9" text="Ja prymaju ŭmovy i {?PLAYER.GENDER}hatova{?}hatovy{\?} zapłacić {AMOUNT}{GOLD_ICON} za stvareńnie handlovaha karavana." />
+    <string id="JNZwJaJ9" text="Ja prymaju ŭmovy i {?PLAYER.GENDER}hatova{?}hatovy{\?} zapłacić {AMOUNT}{GOLD_ICON} za stvareńnie handlovaha kanvoju." />
     <string id="jo3UHKMD" text="Pakinuć heta inšym." />
     <string id="Jo5OjwAU" text="Vašy vajary sapraŭdy hieraična zmahalisia ŭ apošniaj bitvie. Dapamahali paranienym paplečnikam viarnucca ŭ łahier i źbirali cieły zahinułych, časam jany z nadziejaj hladzieli na vas svaimi stomlenymi vačami. Kali i byŭ niekali čas, kab admienna adśviatkavać ich hieraizm i samaachviaravańnie, to hety čas nadyšoŭ." />
     <string id="JO6D30FU" text="Dać im dosyć hrošaj dla zamieny nasiennaha zbožža, navat kali haradžanie mohuć pačać skardzicca na ŭzrost cenaŭ" />
@@ -3994,7 +3994,7 @@
     <string id="ovDbQIo9" text="Ładzić u sieliščy festy i hulni, kab pavysić łajalnaść." />
     <string id="oVdoauUE" text="Majstar Fazy Stralaniny" />
     <string id="OVeSBrhv" text="Cudoŭna, ja budu ŭličvać heta pry ažyćciaŭleńni padobnych dziejańniaŭ." />
-    <string id="OvtzH0b3" text="Nu... U horadzie majecca šmat tavaraŭ, jakija lha vyhadna pradać. Heta zrobić za vas handlovy karavan, jaki vy sfarmujecie. Dziela najmańnia achovy handlovaha karavanu vam treba spłacić prynamsi {AMOUNT}{GOLD_ICON}, a taksama nieabchodny adzin kampańjon, jaki ŭznačalić achovu." />
+    <string id="OvtzH0b3" text="Nu... U horadzie majecca šmat tavaraŭ, jakija lha vyhadna pradać. Heta zrobić za vas handlovy kanvoj, jaki vy sfarmujecie. Dziela najmańnia achovy handlovaha kanvoju vam treba spłacić prynamsi {AMOUNT}{GOLD_ICON}, a taksama nieabchodny adzin kampańjon, jaki ŭznačalić achovu." />
     <string id="Owa28Kpr" text="Ja vas ledź viedaju, a vy prosicie mianie havaryć pra zdradu?" />
     <string id="Owc4NdbL" text="{CHANCE}% šaniec ranieńnia {AMOUNT} vypadkovych vajaroŭ" />
     <string id="OWwPj500" text="5% ad prybytku vioski vypłačvajecca kłanu haspadara ŭ jakaści padatku{newline}Vioski prynosiać na 5% mieniej prybytku kłanam" />
@@ -5179,7 +5179,7 @@
     <string id="V7qF7uas" text="Ja mušu vieści naš narod, a nie {CURRENT_LIEGE.NAME}." />
     <string id="v7sfiv5m" text="{INSULT_NEWS} {GAME_ACTION_NOTES}" />
     <string id="V7YG3nKb" text="{QUEST_GIVER.LINK} {?QUEST_GIVER.GENDER}skazała{?}skazaŭ{\?}vam, što {?QUEST_GIVER.GENDER}joj{?}jamu{\?} patrabujecca {.%}{?(REQUESTED_ANIMAL_AMOUNT &gt; 1)}{PLURAL(SELECTED_ANIMAL)}{?}{SELECTED_ANIMAL}{\?}{.%} dla {?QUEST_GIVER.GENDER}jaje{?}jaho{\?} vioski. {?QUEST_GIVER.GENDER}Jana paprasiła{?}Jon paprasiŭ{\?} vas dastavić {REQUESTED_ANIMAL_AMOUNT} {.%}{?(REQUESTED_ANIMAL_AMOUNT &gt; 1)}{PLURAL(SELECTED_ANIMAL)}{?}{SELECTED_ANIMAL}{\?}{.%} da {?QUEST_GIVER.GENDER}jaje{?}jaho{\?}." />
-    <string id="V8bxlnSl" text="Isnuje šlach farmavańnia handlovaha karavanu z lepšaj achovaj?" />
+    <string id="V8bxlnSl" text="Isnuje šlach farmavańnia handlovaha kanvoju z lepšaj achovaj?" />
     <string id="v8RwzwqD" text="Prabojnik" />
     <string id="V97vqbIb" text="{VALUE}% dośvied vajaram vašaj partyi paśla bitvy." />
     <string id="v9Ad4uGn" text="{AMOUNT}% vašych vajaroŭ atrymaje ranieńni" />
@@ -5495,7 +5495,7 @@
     <string id="wVRwj2ff" text="Majo imia {CONVERSATION_HERO.FIRSTNAME}. Raspytajcie pra mianie, i budziecie viedać, što sa mnoj nia varta svarycca.[if:convo_stern]" />
     <string id="wVyqTlpS" text="Vojska Maje Patrebu ŭ Zabieśpiačeńni" />
     <string id="Ww3uU5e6" text="rańniaja stałaść" />
-    <string id="Ww7vJSb9" text="Chto musić uznačalić karavan?" />
+    <string id="Ww7vJSb9" text="Chto musić uznačalić kanvoj?" />
     <string id="WWFnlL3O" text="Prychilniki {FACTION_LIEGE}" />
     <string id="wwJGE28v" text="Pierahavaryć z brakańjerami" />
     <string id="WwLy9Src" text="Vy viedajecie, što my na vajnie. Ja nie mahu prosta tak vas adpuścić." />
@@ -5700,7 +5700,7 @@
     <string id="xXJnW5w0" text="Dzicio źviartaje pilnuju ŭvahu na tych, chto z {?CHILD.GENDER}joj{?}im{\?} havoryć i časam sprabuje suciešyć siabroŭ, jakija patrapili ŭ biadu." />
     <string id="xXOLhxRl" text="{?CHILD.GENDER}kantralavała{?}kantralavaŭ{\?} vartu." />
     <string id="XXOlu6z0" text="Dziakuj, što nie paškadavali svaich ludziej, kab vyratavać maju spravu. Z nieciarpieńniem čakaju adnaŭleńnia pracy.[if:convo_mocking_teasing]" />
-    <string id="XxQzR39f" text="Dobra, tady davajcie z lepšymi vajarami. Ja hatovy zapłacić {AMOUNT}{GOLD_ICON} za stvareńnie handlovaha karavana." />
+    <string id="XxQzR39f" text="Dobra, tady davajcie z lepšymi vajarami. Ja hatovy zapłacić {AMOUNT}{GOLD_ICON} za stvareńnie handlovaha kanvoju." />
     <string id="xxVE2bw1" text="Palepšyć darohu, ale nie spahaniać myta" />
     <string id="xxZeGhqf" text="Paŭstańnie {MALE_LESSER_NOBLE_NAME}" />
     <string id="Xy4brTbf" text="Vy nia majecie {BRIBE_AMOUNT} denaraŭ." />
@@ -5973,7 +5973,7 @@
     <string id="z7fFBuqt" text="Ja ryzyknu. Napierad, chłopcy!" />
     <string id="Z7RAahk3" text="Pierakanać svaich ludziej, što hrošy lepiej vydatkavać na zapasy i rekrutaŭ, kab zabiaśpiečyć ich vyžyvańnie" />
     <string id="z7y35aPE" text="Prapanova Najmictva" />
-    <string id="z8LbFyNA" text="{FIRSTNAME} Sabačaja Pysa" />
+    <string id="z8LbFyNA" text="{FIRSTNAME} Sabačča Pysa" />
     <string id="z9pbB0K5" text="Vy paśpiachova dastavili tavary ŭ adpaviednaści z zapytam." />
     <string id="Z9pq58h4" text="Ja dumaju pra inšy navyk." />
     <string id="Z9Rey6LC" text="Hadzińnikavy Miechanizm" />
