--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
@@ -305,7 +305,7 @@
     <string id="xQUi0F0k" text="{.Nijaki}Pałasataje Palito" />
     <string id="XU9WgcIO" text="{.Zanocy}Uzmocnienaja Zamšavaja Brania" />
     <string id="y3CwqUDR" text="{.Zanocy}Hornaja Kalčužnaja Kašula" />
-    <string id="y3oIzUEp" text="{.Zanocy}Tunika z Častkami Plačej" />
+    <string id="y3oIzUEp" text="{.Zanocy}Tunika z Naplečnymi Padkładkami" />
     <string id="ya4i8G3y" text="{.Zanocy}Tunika z Pojasam" />
     <string id="yDykmlS7" text="{.Zanocy}Toha z Tartanam" />
     <string id="yfjqWrUx" text="{.Zanocy}Lasnaja Sukienka Prostaha Čałavieka" />
@@ -820,7 +820,7 @@
     <string id="e6WOD7Ra" text="{.Zanocy}Nakidka z Machrami" />
     <string id="ectdzWNx" text="{.Muzcynski}Ciažki Šal z Tartanam" />
     <string id="eN1eFdhF" text="{.Zanocy}Upryhožanaja Skuranaja Zaprežka nad Łuskataj" />
-    <string id="EyQTfFS6" text="{.Mnozny}Satkanyja Naplečnyja Paduški" />
+    <string id="EyQTfFS6" text="{.Mnozny}Satkanyja Naplečnyja Padkładki" />
     <string id="FItBDuqh" text="{.Muzcynski}Bavaŭniany Kaptur" />
     <string id="FOx5vZSJ" text="{.Zanocy}Braniavany Futr Miadźviedzia" />
     <string id="FQdTo5ay" text="{.Zanocy}Łuskataja Abarona Plačej" />
@@ -1064,7 +1064,7 @@
     <string id="iEbP2INp" text="{.Zanocy}Upryhožanaja Kaskara" />
     <string id="ifzgMcrK" text="{.Muzcynski}Łuk Kačeŭnika" />
     <string id="IK2Z9zWk" text="{.Muzcynski}Prosty Bułat" />
-    <string id="IM2SamZ8" text="{.Muzcynski}Falkian" />
+    <string id="IM2SamZ8" text="{.Muzcynski}Falšyjon" />
     <string id="J3erdO1b" text="{.Muzcynski}Kraj Śvitanku" />
     <string id="j4XraSN6" text="{.Zanocy}Lohkaja Dzida" />
     <string id="JBVAeXx3" text="{.Muzcynski}Machovi" />
@@ -1090,7 +1090,7 @@
     <string id="KRuZuMFI" text="{.Nijaki}Prysud" />
     <string id="ksxylfU4" text="{.Muzcynski}Rabrysty Zbrojny Mieč" />
     <string id="KTegaNPW" text="{.Muzcynski}Doŭhi Łuk" />
-    <string id="ktJ6crBs" text="{.Muzcynski}Šyroki Falkian" />
+    <string id="ktJ6crBs" text="{.Muzcynski}Šyroki Falšyjon" />
     <string id="Kv4zAMIh" text="{.Zanocy}Bułava Katafrakta" />
     <string id="kxtSkGju" text="{.Muzcynski}Ambasadar" />
     <string id="L5i5RgO0" text="{.Zanocy}Vaŭnianaja Prašča" />
@@ -1141,7 +1141,7 @@
     <string id="QnyD1yWB" text="{.Zanocy}Šyrokaja Siakiera Paŭnočnika" />
     <string id="Qpl5aCb0" text="{.Zanocy}Siakiera Vajara Vieterana" />
     <string id="qxYDHkKl" text="{.Zanocy}Uzmocnienaja Prašča" />
-    <string id="qZOpdQVx" text="{.Muzcynski}Zorny Falkian" />
+    <string id="qZOpdQVx" text="{.Muzcynski}Zorny Falšyjon" />
     <string id="r07M9xbT" text="{.Muzcynski}Ciažki Arbalet" />
     <string id="Rcc0JW6H" text="{.Zanocy}Tamaskinskaja Stalovaja Spata" />
     <string id="RcCtV0aS" text="{.Muzcynski}Lasny Cisavy Łuk" />
@@ -1167,7 +1167,7 @@
      <string id="Th4E7v2h" text="{.Mnozny}Drotyki Vieršnika" />
      <string id="tpUzcdY6" text="{.Muzcynski}Vysoki Achopleny Mieč-Ild" />
     <string id="TQ1MVhIX" text="{.Zanocy}Lohkaja Dzida Vieršnika" />
-    <string id="tQw4Zfwu" text="{.Muzcynski}Zavostrany Falkian" />
+    <string id="tQw4Zfwu" text="{.Muzcynski}Zavostrany Falšyjon" />
     <string id="tsaSBPKu" text="{.Muzcynski}Cykuryjon" />
     <string id="tzoARfAm" text="{.Zanocy}Ciažkaja Dzida Družyńnika" />
     <string id="UMX05EQF" text="{.Zanocy}Lohkaja Karaleŭskaja Bułava" />
