--- a/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/Native/std_common_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.13/Belarusian.Core/ModuleData/Languages/BYc/Native/std_common_strings_xml_by.xml
@@ -739,7 +739,7 @@
   <string id="LqPJY4s9" text="Горад Аргарон узвышаецца там, дзе халодная, павольна бягучая рака Нэвіс упадае ў возера Лаканіс. Некалі гэта была зямля лаканійцаў, якія бачылі ў Імперыі абаронцаў ад больш ваяўнічых палайскіх народаў. Яны віталі і зьмешваліся зь Імперскімі пасяленцамі, іх правадыры ўвайшлі ў склад Сената, а іх старыя язык і звычаі зьніклі."/>
   <string id="LRbGXEw2" text="{.Muzcynski}Апераны Упрыгожаны Кальчужны Шалом з Наносьнікам"/>
   <string id="LsZEdD2z" text="Сьцены"/>
-  <string id="LTOaBiw3" text="Гадзюка"/>
+  <string id="LTOaBiw3" text="{.Zanocy}Гадзюка"/>
   <string id="lULBZ714" text="Алей{@Plural}амфараў алею{\@}"/>
   <string id="luoXhz19" text="{.Zanocy}Цяжкая Ламелярная Камізэлька"/>
   <string id="lVtoBMhp" text="{.Zanocy}Шапка з Тартанам"/>
@@ -1802,7 +1802,7 @@
   <string id="XZxIpCQH" text="Форыс"/>
   <string id="y1YTxkmn" text="{.Zanocy}Вупраж"/>
   <string id="y3CwqUDR" text="{.Zanocy}Горная Кальчужная Кашуля"/>
-  <string id="y3oIzUEp" text="{.Zanocy}Туніка з Часткамі Плячэй"/>
+  <string id="y3oIzUEp" text="{.Zanocy}Туніка з Наплечнымі Падкладкамі"/>
   <string id="Y94H6XnK" text="Прыняць"/>
   <string id="Y9egTJg0" text="Дзённая Зьмена"/>
   <string id="YAWCkOYa" text="Сьляды выглядаюць сьвежымі, і я бачыў трохі дыму на гарызонце. Яны ня могуць рухацца занадта хутка, калі ўсё яшчэ займаюцца рабаваньнем і набегамі. Не, я ўпэўнены, што мы зможам выратаваць малых... або загінем пры спробе."/>
